# sw_battle_test

./: CMakeLists.txt  README.md  commands_example_test.txt  documentation.txt  history.txt
src/: main.cpp
src/Helpers/: Position.h
src/IO/Commands/: CreateMap.hpp  March.hpp  SpawnHunter.hpp  SpawnSwordsman.hpp
src/IO/System/: CommandParser.hpp  EventLog.hpp
src/Logic/: Cell.cpp  Cell.h  Game.cpp  Game.h  Hunter.cpp  Hunter.h  Map.cpp  Map.h  Model.cpp  Model.h  SwordsMan.cpp  SwordsMan.h  Unit.cpp  Unit.h
src/Logic/Delegate/: LogMapDelegate.cpp  LogMapDelegate.h  LogUnitDelegate.cpp  LogUnitDelegate.h
src/Logic/Strategy/: Action.h  AttackAction.cpp  AttackAction.h  AttackClose.cpp  AttackClose.h  AttackRange.cpp  AttackRange.h  Damager.h  Finder.cpp  Finder.h  Healther.h  IPath.h  Move.cpp  Move.h  PathLinear.cpp  PathLinear.h  PathStand.h  Reacher.cpp  Reacher.h  UnDetector.cpp  UnDetector.h
src/Tests/: UnitTests.cpp  UnitTests.h
test/: CMakeLists.txt  hunter_sword_command.txt  out.txt  two_sword_move_attack_command.txt  two_sword_move_attack_origin.txt  two_swordsman_attack_command.txt  two_swordsman_attack_origin.txt
test/result/: hunter_sword.txt  main_battle.txt  two_swordsman_move.txt
test/scenario/: main_battle.txt  two_swordsman_move.txt
test/src/: MathTest.cpp  ScenarioTest.cpp
